--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -34,13 +34,14 @@ p {
   top: 50%;
   transform: translateY(-50%); }
 
-#home-name-banner {
-  font-size: 5em !important;
+#home-title {
+  width: 100%;
+  font-size: 10em !important;
   text-align: center;
   color: #BEB8EB; }
   @media screen and (max-width: 500px) {
-    #home-name-banner {
-      font-size: 1.5em !important; } }
+    #home-title {
+      font-size: 5em !important; } }
 
 #home-description {
   text-align: center;
@@ -56,7 +57,7 @@ p {
     padding-bottom: 2vh; }
   @media screen and (max-width: 500px) {
     #home-description {
-      font-size: 2em; } }
+      font-size: 1.5em; } }
 
 h1 {
   font-family: "Economica", sans-serif;
